# python-courses

./: README.md  pyproject.toml
tasks/chapter_01_variables/: task01.py  task02.py  task03.py  task04.py  task05.py  test_task01.py  test_task02.py  test_task03.py  test_task04.py  test_task05.py
tasks/chapter_02_ifelse/: task01.py  task02.py  task03.py  task04.py  task05.py  test_task01.py  test_task02.py  test_task03.py  test_task04.py  test_task05.py
tasks/chapter_03_match/: task01.py  task02.py  task03.py  test_task01.py  test_task02.py  test_task03.py
tasks/chapter_04_loops/: task01.py  task02.py  task03.py  task04.py  task05.py  task06.py  task07.py  task08.py  test_task01.py  test_task02.py  test_task03.py  test_task04.py  test_task05.py  test_task06.py  test_task07.py  test_task08.py
tests/: test_task01_ifelse.py
