[tool.poetry]
name = "python_courses"
version = "0.1.0"
description = "This repository is designed for students to practice Python programming and self-check their homework using automatic tests."
authors = ["Denis Vershadov"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
